--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
       </div>
     </main>
 
+    <!--FOOTER-->
     <footer>
       <ul class="pie">
         <li class="item-footer">
@@ -291,6 +292,7 @@
         </li>
       </ul>
     </footer>
+
     <!-- JAVASCRIPT BUNDLE WITH POPPER -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
