Se realizo responsive

--- a/destinos.html
+++ b/destinos.html
@@ -122,88 +122,113 @@
     </nav>
     <!--MAIN-->
     <main>
-      <!--EGIPTO CARD-->
-      <div class="card">
-        <img class="card-img" src="imagenes/egipto-card1.jpg" alt="egipto" />
-        <h4 class="card-title">Egipto</h4>
-        <p class="card-p">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit unde
-          nulla excepturi iste soluta suscipit, laudantium mollitia pariatur
-          molestias distinctio.
-        </p>
-        <a href="egipto.html"><button class="card-button">Ver mas</button></a>
+      <div class="container">
+        <div class="row d-flex">
+          <div class="col-md-4">
+            <!--EGIPTO CARD-->
+            <div class="card">
+              <img
+                class="card-img"
+                src="imagenes/egipto-card1.jpg"
+                alt="egipto"
+              />
+              <h4 class="card-title">Egipto</h4>
+              <p class="card-p">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
+                unde nulla excepturi iste soluta suscipit, laudantium mollitia
+                pariatur molestias distinctio.
+              </p>
+              <a href="egipto.html"
+                ><button class="card-button">Ver mas</button></a
+              >
+            </div>
+          </div>
+          <div class="col-md-4">
+            <!--KENIA CARD-->
+            <div class="card">
+              <img
+                class="card-img"
+                src="imagenes/kenia-card1.jpg"
+                alt="kenia"
+              />
+              <h4 class="card-title">Kenia</h4>
+              <p class="card-p">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
+                unde nulla excepturi iste soluta suscipit, laudantium mollitia
+                pariatur molestias distinctio.
+              </p>
+              <button class="card-button">Ver mas</button>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <!--MACHUPICHU CARD-->
+            <div class="card">
+              <img
+                class="card-img"
+                src="imagenes/machupichu-card1.jpg"
+                alt="machupichu"
+              />
+              <h4 class="card-title">Machu Pichu</h4>
+              <p class="card-p">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
+                unde nulla excepturi iste soluta suscipit, laudantium mollitia
+                pariatur molestias distinctio.
+              </p>
+              <button class="card-button">Ver mas</button>
+            </div>
+          </div>
+        </div>
       </div>
-
-      <!--KENIA CARD-->
-      <div class="card">
-        <img class="card-img" src="imagenes/kenia-card1.jpg" alt="kenia" />
-        <h4 class="card-title">Kenia</h4>
-        <p class="card-p">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit unde
-          nulla excepturi iste soluta suscipit, laudantium mollitia pariatur
-          molestias distinctio.
-        </p>
-        <button class="card-button">Ver mas</button>
-      </div>
-
-      <!--MACHUPICHU CARD-->
-      <div class="card">
-        <img
-          class="card-img"
-          src="imagenes/machupichu-card1.jpg"
-          alt="machupichu"
-        />
-        <h4 class="card-title">Machu Pichu</h4>
-        <p class="card-p">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit unde
-          nulla excepturi iste soluta suscipit, laudantium mollitia pariatur
-          molestias distinctio.
-        </p>
-        <button class="card-button">Ver mas</button>
-      </div>
-
-      <!--MALDIVAS CARD-->
-      <div class="card">
-        <img
-          class="card-img"
-          src="imagenes/maldivas-card1.jpg"
-          alt="maldivas"
-        />
-        <h4 class="card-title">Islas Maldivas</h4>
-        <p class="card-p">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit unde
-          nulla excepturi iste soluta suscipit, laudantium mollitia pariatur
-          molestias distinctio.
-        </p>
-        <button class="card-button">Ver mas</button>
-      </div>
-
-      <!--RIO CARD-->
-      <div class="card">
-        <img class="card-img" src="imagenes/rio-card1.jpeg" alt="rio" />
-        <h4 class="card-title">Rio de Janeiro</h4>
-        <p class="card-p">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit unde
-          nulla excepturi iste soluta suscipit, laudantium mollitia pariatur
-          molestias distinctio.
-        </p>
-        <button class="card-button">Ver mas</button>
-      </div>
-
-      <!--TAILANDIA CARD-->
-      <div class="card">
-        <img
-          class="card-img"
-          src="imagenes/tailandia-card1.jpg"
-          alt="tailandia"
-        />
-        <h4 class="card-title">Tailandia</h4>
-        <p class="card-p">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus
-          doloremque eveniet perspiciatis dolore modi facere quas tempora
-          impedit sed incidunt.
-        </p>
-        <button class="card-button">Ver mas</button>
+      <div class="container">
+        <div class="row d-flex">
+          <div class="col-md-4">
+            <!--MALDIVAS CARD-->
+            <div class="card">
+              <img
+                class="card-img"
+                src="imagenes/maldivas-card1.jpg"
+                alt="maldivas"
+              />
+              <h4 class="card-title">Islas Maldivas</h4>
+              <p class="card-p">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
+                unde nulla excepturi iste soluta suscipit, laudantium mollitia
+                pariatur molestias distinctio.
+              </p>
+              <button class="card-button">Ver mas</button>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <!--RIO CARD-->
+            <div class="card">
+              <img class="card-img" src="imagenes/rio-card1.jpeg" alt="rio" />
+              <h4 class="card-title">Rio de Janeiro</h4>
+              <p class="card-p">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
+                unde nulla excepturi iste soluta suscipit, laudantium mollitia
+                pariatur molestias distinctio.
+              </p>
+              <button class="card-button">Ver mas</button>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <!--TAILANDIA CARD-->
+            <div class="card">
+              <img
+                class="card-img"
+                src="imagenes/tailandia-card1.jpg"
+                alt="tailandia"
+              />
+              <h4 class="card-title">Tailandia</h4>
+              <p class="card-p">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus
+                doloremque eveniet perspiciatis dolore modi facere quas tempora
+                impedit sed incidunt.
+              </p>
+              <button class="card-button">Ver mas</button>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
 
