--- a/egipto.html
+++ b/egipto.html
@@ -155,34 +155,43 @@
 
           <!--DESCRIPCION EGIPTO-->
 
-          <!--DURACION-->
-          <div class="cardeg">
-            <div class="text-center"><i class="fa-solid fa-clock"></i></div>
-            <h5 class="title-eg">Duración</h5>
-            <h4 class="h4-eg">10 días</h4>
-            <p class="p-eg">
-              9 Noches
-            </p>
-          </div>
+          <div class="container p-5">
+            <div class="row d-flex">
+              <div class="col-md-4">
 
-          <!--PAISES-->
-          <div class="cardeg">
-            <div class="text-center"><i class="fa-solid fa-earth-africa"></i></i></div>
-            <h5 class="title-eg">Países</h5>
-            <h4 class="h4-eg">1 País</h4>
-            <p class="p-eg">
-              6 Ciudades
-            </p>
-          </div>
+                <!--DURACION-->
+                <div class="cardeg">
+                  <div class="text-center"><i class="fa-solid fa-clock"></i></div>
+                  <h5 class="title-eg">Duración</h5>
+                  <h4 class="h4-eg">10 días</h4>
+                  <p class="p-eg">
+                    9 Noches
+                  </p>
+                </div>
+      </div>
+              <div class="col-md-4">
 
-          <!--TOUR GRUPAL-->
-          <div class="cardeg">
-            <div class="text-center"><i class="fa-solid fa-people-group"></i></div>
-            <h5 class="title-eg">Tipo</h5>
-            <h4 class="h4-eg">Tour Grupal</h4>
-            <p class="p-eg">
-              Grupos de 15 viajeros
-            </p>
+                <!--PAISES-->
+                <div class="cardeg">
+                  <div class="text-center"><i class="fa-solid fa-earth-africa"></i></i></div>
+                  <h5 class="title-eg">Países</h5>
+                  <h4 class="h4-eg">1 País</h4>
+                  <p class="p-eg">
+                    6 Ciudades
+                  </p>
+                </div></div>
+              <div class="col-md-4">
+                
+                <!--TOUR GRUPAL-->
+                <div class="cardeg">
+                  <div class="text-center"><i class="fa-solid fa-people-group"></i></div>
+                  <h5 class="title-eg">Tipo</h5>
+                  <h4 class="h4-eg">Tour Grupal</h4>
+                  <p class="p-eg">
+                    Grupos de 15 viajeros
+                  </p>
+                </div></div>
+            </div>
           </div>
           
           <!--PARRAFO DESCRICIPCION EGIPTO-->
