--- a/index.html
+++ b/index.html
@@ -201,76 +201,85 @@
         <h1>¿Por qué viajar con TravelBravo?</h1>
       </div>
 
-      <!--DESCUBRE UNA NUEVA FORMA DE VIAJAR-->
-      <div class="card1">
-        <div class="text-center"><i class="fa-regular fa-lightbulb"></i></div>
-        <h4 class="card-title1">Descubre una nueva forma de viajar</h4>
-        <p class="card-p1">
-          Vive tu viaje de aventura como una experiencia llena de emociones que
-          recordarás el resto de tu vida.
-        </p>
+     <div class="container">
+      <div class="row d-md-flex">
+        <div class="col-md-4"><!--DESCUBRE UNA NUEVA FORMA DE VIAJAR-->
+          <div class="card1">
+            <div class="text-center"><i class="fa-regular fa-lightbulb"></i></div>
+            <h4 class="card-title1">Descubre una nueva forma de viajar</h4>
+            <p class="card-p1">
+              Vive tu viaje de aventura como una experiencia llena de emociones que
+              recordarás el resto de tu vida.
+            </p>
+          </div></div>
+        <div class="col-md-4">
+          <!--PENSAMOS EN LOS DETALLES-->
+          <div class="card1">
+            <div class="text-center">
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+            <h4 class="card-title1">Pensamos en los detalles</h4>
+            <p class="card-p1">
+              Planificamos cada momento del viaje para que tu solo te dediques a
+              disfrutar.
+            </p>
+          </div></div>
+        <div class="col-md-4">
+          <!--SOMOS VIAJEROS POR NATURALEZA-->
+          <div class="card1">
+            <div class="text-center">
+              <i class="fa-solid fa-person-walking-luggage"></i>
+            </div>
+            <h4 class="card-title1">Somos viajeros por naturaleza</h4>
+            <p class="card-p1">
+              Somos viajeros, no turistas . Por eso nos olvidaremos de los lujos y
+              buscaremos recorrer cada destino a fondo para enriquecer nuestra
+              experiencia.
+            </p>
+          </div></div>
       </div>
-
-      <!--PENSAMOS EN LOS DETALLES-->
-      <div class="card1">
-        <div class="text-center">
-          <i class="fa-solid fa-magnifying-glass"></i>
-        </div>
-        <h4 class="card-title1">Pensamos en los detalles</h4>
-        <p class="card-p1">
-          Planificamos cada momento del viaje para que tu solo te dediques a
-          disfrutar.
-        </p>
+     </div>
+     <div class="container">
+      <div class="row d-md-flex">
+        <div class="col-md-4">
+          <!--VIAJA DE FORMA ECONOMICA-->
+          <div class="card1">
+            <div class="text-center">
+              <i class="fa-solid fa-hand-holding-dollar"></i>
+            </div>
+            <h4 class="card-title1">Viaja de forma económica</h4>
+            <p class="card-p1">
+              Disfruta la mayor cantidad de experiencias al menor precio posible y
+              aprovecha tu tiempo al máximo.
+            </p>
+          </div></div>
+        <div class="col-md-4">
+          <!--GRUPOS REDUCIDOS-->
+          <div class="card1">
+            <div class="text-center"><i class="fa-solid fa-people-group"></i></div>
+            <h4 class="card-title1">Grupos reducidos</h4>
+            <p class="card-p1">
+              Compartirás cada momento de la experiencia con viajeros como tú,
+              llenos de curiosidades e inquietudes.
+            </p>
+          </div></div>
+        <div class="col-md-4">
+          <!--VIVE EL DESTINO COMO UN LOCAL-->
+          <div class="card1">
+            <div class="text-center">
+              <i class="fa-solid fa-earth-americas"></i>
+            </div>
+            <h4 class="card-title1">Vive el destino como un local</h4>
+            <p class="card-p1">
+              Nos encantan los intercambios culturales, por eso haremos que te
+              integres entre la gente local para que interactúes con ellos, su
+              cultura, gastronomía y su filosofía de vida.
+            </p>
+          </div>
+        </main>
       </div>
-
-      <!--SOMOS VIAJEROS POR NATURALEZA-->
-      <div class="card1">
-        <div class="text-center">
-          <i class="fa-solid fa-person-walking-luggage"></i>
-        </div>
-        <h4 class="card-title1">Somos viajeros por naturaleza</h4>
-        <p class="card-p1">
-          Somos viajeros, no turistas . Por eso nos olvidaremos de los lujos y
-          buscaremos recorrer cada destino a fondo para enriquecer nuestra
-          experiencia.
-        </p>
       </div>
-
-      <!--VIAJA DE FORMA ECONOMICA-->
-      <div class="card1">
-        <div class="text-center">
-          <i class="fa-solid fa-hand-holding-dollar"></i>
-        </div>
-        <h4 class="card-title1">Viaja de forma económica</h4>
-        <p class="card-p1">
-          Disfruta la mayor cantidad de experiencias al menor precio posible y
-          aprovecha tu tiempo al máximo.
-        </p>
-      </div>
-
-      <!--GRUPOS REDUCIDOS-->
-      <div class="card1">
-        <div class="text-center"><i class="fa-solid fa-people-group"></i></div>
-        <h4 class="card-title1">Grupos reducidos</h4>
-        <p class="card-p1">
-          Compartirás cada momento de la experiencia con viajeros como tú,
-          llenos de curiosidades e inquietudes.
-        </p>
-      </div>
-
-      <!--VIVE EL DESTINO COMO UN LOCAL-->
-      <div class="card1">
-        <div class="text-center">
-          <i class="fa-solid fa-earth-americas"></i>
-        </div>
-        <h4 class="card-title1">Vive el destino como un local</h4>
-        <p class="card-p1">
-          Nos encantan los intercambios culturales, por eso haremos que te
-          integres entre la gente local para que interactúes con ellos, su
-          cultura, gastronomía y su filosofía de vida.
-        </p>
-      </div>
-    </main>
+     </div>
 
     <!--FOOTER-->
     <footer>
