se modifica antes de viajar

--- a/antes-de-viajar.html
+++ b/antes-de-viajar.html
@@ -123,42 +123,53 @@
 
     <!--IMG-->
     <main>
-      <div class="card mb-12" style="max-width: 540px">
-        <div class="row g-0">
-          <div class="col-md-12">
+      <div class="card mb-12">
+        <div class="row p-3 m-3">
+          <div class="col-md-4 p-2">
             <img
-              src="imagenes/antes-de-viajar.jpg"
+              src="imagenes/turista1(1).jpg"
               class="img-fluid rounded-start"
               alt="antes-de-viajar"
             />
           </div>
-          <div class="col-md-12">
-            <div class="card-body">
-              <h5 class="card-title">Antes de viajar</h5>
-              <p class="card-text">
-                Sabemos lo importante que es para ti sumergirte en la aventura
-                de viajar, por eso queremos brindarte este espacio para que
-                conozcas cómo funcionan nuestros viajes y que puedas descubrir
-                si esta modalidad de viaje es para ti. En un viaje de aventura
-                es importante tener una filosofía de viaje en la cual la
-                adaptabilidad, el pensamiento positivo y constructivo sean los
-                pilares. Sabemos que pueden surgir situaciones desfavorables;
-                como reservar un alojamiento que no nos guste, o tener que
-                suspender una actividad por tormentas o lluvias torrenciales. En
-                el fondo tenemos que tener claro que esos pequeños imprevistos
-                son parte de este tipo de experiencias. En cualquiera de
-                nuestras experiencias vivirás emociones, e intercambios con
-                diversas personas, por eso es importante que durante todo el
-                viaje se mantenga una actitud positiva, paciente y que todos
-                podamos mostrar un espíritu de ayuda mutua. Creemos firmemente
-                en una forma de viajar respetuosa con el medio ambiente y con
-                las culturas que visitamos, solidaria y que contribuya con el
-                desarrollo de las economías locales.
-              </p>
-            </div>
+          <div class="col-md-4 p-2">
+            <img
+              src="imagenes/turista2(1).jpg"
+              class="img-fluid rounded-start"
+              alt="antes-de-viajar"
+            />
           </div>
-        </div>
-      </div>
+          <div class="col-md-4 p-2">
+            <img
+              src="imagenes/turista3(1).jpg"
+              class="img-fluid rounded-start"
+              alt="antes-de-viajar"
+            />
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Antes de viajar</h5>
+            <p class="card-text">
+              Sabemos lo importante que es para ti sumergirte en la aventura
+              de viajar, por eso queremos brindarte este espacio para que
+              conozcas cómo funcionan nuestros viajes y que puedas descubrir
+              si esta modalidad de viaje es para ti. En un viaje de aventura
+              es importante tener una filosofía de viaje en la cual la
+              adaptabilidad, el pensamiento positivo y constructivo sean los
+              pilares. Sabemos que pueden surgir situaciones desfavorables;
+              como reservar un alojamiento que no nos guste, o tener que
+              suspender una actividad por tormentas o lluvias torrenciales. En
+              el fondo tenemos que tener claro que esos pequeños imprevistos
+              son parte de este tipo de experiencias. En cualquiera de
+              nuestras experiencias vivirás emociones, e intercambios con
+              diversas personas, por eso es importante que durante todo el
+              viaje se mantenga una actitud positiva, paciente y que todos
+              podamos mostrar un espíritu de ayuda mutua. Creemos firmemente
+              en una forma de viajar respetuosa con el medio ambiente y con
+              las culturas que visitamos, solidaria y que contribuya con el
+              desarrollo de las economías locales.
+            </p>
+          </div>
+
     </main>
     <!--FOOTER-->
     <footer>
