realizo pag kenia

--- a/kenia.html
+++ b/kenia.html
@@ -121,7 +121,251 @@
     </nav>
 
     <!--MAIN-->
+    <main>
+      <div class="safari"><h1>7 días de safari</h1></div>
 
+      <!--CAROUSEL-->
+      <div
+        id="carouselExampleIndicators"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="imagenes/keni-carousel1(1).jpg"
+              class="d-block w-100"
+              alt="1"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="imagenes/kenia-carousel2(1).jpg"
+              class="d-block w-100"
+              alt="2"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="imagenes/kenia-carousel3(1).jpg"
+              class="d-block w-100"
+              alt="3"
+            />
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Anterior</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Siguiente</span>
+        </button>
+      </div>
+
+       <!--DESCRIPCION KENIA-->
+    <div class="container p-5">
+      <div class="row d-flex">
+        <div class="col-md-4">
+
+          <!--DURACION-->
+          <div class="cardkenia">
+            <div class="text-center"><i class="fa-solid fa-clock"></i></div>
+            <h4 class="h4-kenia">7 días</h4>
+            <p class="p-kenia">
+              6 Noches
+            </p>
+          </div>
+</div>
+        <div class="col-md-4">
+
+          <!--PAISES-->
+          <div class="cardkenia">
+            <div class="text-center"><i class="fa-solid fa-earth-africa"></i></i></div>
+            <h4 class="h4-kenia">1 País</h4>
+            <p class="p-kenia">
+              5 Ciudades
+            </p>
+          </div></div>
+        <div class="col-md-4">
+          
+          <!--TOUR GRUPAL-->
+          <div class="cardkenia">
+            <div class="text-center"><i class="fa-solid fa-people-group"></i></div>
+            <h4 class="h4-kenia">Tour Grupal</h4>
+            <p class="p-kenia">
+              Grupos de 15 viajeros
+            </p>
+          </div></div>
+      </div>
+    </div>
+
+    <!--PARRAFO DESCRICIPCION KENIA-->
+    <div class="container">
+      <div class="row d-flex text-align-center justify-content-between">
+          <div class="col-md-12">
+              <div><p class="text-center">Kenia es un país de África Oriental con una costa en el océano Índico. Su territorio abarca sabana, terrenos en lagos, el espectacular Gran Valle del Rift y zonas montañosas altas. También alberga fauna, como leones, elefantes y rinocerontes. Se realizan safaris desde Nairobi, la capital, a la Reserva Masái Mara, conocida por sus migraciones anuales de ñus, y el Parque Nacional Amboseli.</p></div>
+
+          </div>
+      </div>
+    </div>
+
+    <h2>Incluye</h2>
+          <ul class="ulkenia">
+            <li><i class="bi bi-check2"></i> Traslados de llegada y salida según itinerario</li>
+            <li><i class="bi bi-check2"></i> Transporte en vehículo con aire acondicionado durante todo el recorrido.</li>
+            <li><i class="bi bi-check2"></i> 1 noche en régimen de alojamiento y desayuno en Nairobi.</li>
+            <li><i class="bi bi-check2"></i> 1 cena en el restaurante Carnivore en Nairobi.</li>
+            <li><i class="bi bi-check2"></i> Pensión completa en los lodges durante el safari.</li>
+            <li><i class="bi bi-check2"></i> Entradas a los Parques / Reservas Nacionales.</li>
+            <li><i class="bi bi-check2"></i> Safaris indicados en el itinerario.</li>
+            <li><i class="bi bi-check2"></i> Chofer-guía de habla española.</li>
+            <li><i class="bi bi-check2"></i> Agua mineral durante el recorrido.</li>
+            <li><i class="bi bi-check2"></i> Seguro de viaje.</li>
+          </ul>
+
+          <!--ITINERARIO-->
+          <h2>Itinerario</h2>
+
+          <div class="accordion accordion-flush" id="accordionFlush">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                  Día 1: Nairobi
+                </button>
+              </h2>
+              <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlush">
+                <div class="accordion-body"><p>Llegada y traslado al hotel. Nairobi, capital de Kenia. Cena y alojamiento (los pasajeros con llegadas posteriores a las 17.00 hrs no tendrán cena).</p></div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                    Día 2:Nairobi & Samburu / Shaba
+                </button>
+              </h2>
+              <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlush">
+                <div class="accordion-body"><p>Desayuno. Salida temprano hacia la Reserva Nacional de Samburu / Shaba vía Karatina y cruzando el ecuador en Nanyuki. Llegada y almuerzo. En ambas opciones, por la tarde, safari. Cena y alojamiento en el lodge.</p></div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                    Día 3 : Samburu / Shaba & Montes Aberdare / Zona Monte Kenia
+                </button>
+              </h2>
+              <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlush">
+                <div class="accordion-body"><p>Safari al amanecer. Regreso al logde para el desayuno. Salida hacia nuestro siguiente destino. Llegada y almuerzo. Resto del día libre. Traslado al lodge correspondiente. Cena y alojamiento.</p></div>
+              </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingFour">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                    Día 4: Montes Aberdare / Zona Monte Kenia & Lago Nakuru
+                  </button>
+                </h2>
+                <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlush">
+                  <div class="accordion-body"><p>Desayuno. Salida hacia el Parque Nacional Lago Nakuru. Llegada y almuerzo en el lodge. Safari por la tarde. Traslado al lodge correspondiente. Cena y alojamiento.</p></div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingFive">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                    Día 5 : Lago Nakuru & Masai Mara
+                  </button>
+                </h2>
+                <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlush">
+                  <div class="accordion-body"><p>Desayuno. Salida hacia la Reserva Nacional de Masai Mara vía Narok. Llegada y almuerzo. Por la tarde, realizaremos un safari. Vuelta al lodge. Cena y alojamiento.</p></div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingSix">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
+                    Día 6: Masai Mara 
+                  </button>
+                </h2>
+                <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlush">
+                  <div class="accordion-body"><p>Desayuno. En el día de hoy, realizaremos un safari por la mañana y un safari por la tarde. Pensión completa. Alojamiento.</p></div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingSeven">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSeven" aria-expanded="false" aria-controls="flush-collapseSeven">
+                    Día 7: Masai Mara - Nairobi  
+                  </button>
+                </h2>
+                <div id="flush-collapseSeven" class="accordion-collapse collapse" aria-labelledby="flush-headingSeven" data-bs-parent="#accordionFlush">
+                  <div class="accordion-body"><p><li>Desayuno. Salida hacia Nairobi y llegada a medio día. Traslado al aeropuerto. Fin de los servicios.</li></p></div>
+                </div>
+              </div>
+
+              <!--PRECIOS-->
+        <main class="container text-center d-flex flex-column justify-content-center alto">
+          <h1 class="display-4">Precios</h1>
+          <p class="lead">Para reservar tu lugar debes realizar una seña por USD 200</p>
+          <div class="row gy-3">
+            <article class="col-12 col-md-6">
+              <div class="border border-dark rounded-3">
+                <p class="mt-5 fw-bold">Un viajero</p>
+                <h2 class="display-4">U$S 1944</h2>
+                <p class="font-monospace mt-3">Contado efectivo</p>
+                <ul class="list-unstyled my-5">
+                  <li>Tickets aéreos en clase turista</li>
+                  <li>Seguro de viajes por USD 65.000, incluye cobertura por COVID-19</li>
+                  <li>Guía local durante todo el viaje</li>
+                </ul>
+                <a href="#" class="bg-secondary text-white d-block py-3 text-decoration-none">Comprar</a>
+              </div>
+            </article>
+            <article class="col-12 col-md-6">
+              <div class="border border-dark rounded-3 bg-dark text-white">
+                <p class="mt-5 fw-bold">Viajeros en base doble</p>
+                <h2 class="display-4">U$S 1644</h2>
+                <p class="font-monospace mt-3">Contado efectivo</p>
+                <ul class="list-unstyled my-5">
+                  <li>Tickets aéreos en clase turista</li>
+                  <li>Seguro de viajes por USD 65.000, incluye cobertura por COVID-19</li>
+                  <li>Guía local durante todo el viaje</li>
+                </ul>
+                <a href="#" class="bg-secondary text-white d-block py-3 text-decoration-none">Comprar</a>
+              </div>
+            </article>
+              
+    </main>
+
+   
     <!--FOOTER-->
     <footer>
       <ul class="pie">
