se modifica egipto

--- a/egipto.html
+++ b/egipto.html
@@ -162,7 +162,6 @@
                 <!--DURACION-->
                 <div class="cardeg">
                   <div class="text-center"><i class="fa-solid fa-clock"></i></div>
-                  <h5 class="title-eg">Duración</h5>
                   <h4 class="h4-eg">10 días</h4>
                   <p class="p-eg">
                     9 Noches
@@ -174,7 +173,6 @@
                 <!--PAISES-->
                 <div class="cardeg">
                   <div class="text-center"><i class="fa-solid fa-earth-africa"></i></i></div>
-                  <h5 class="title-eg">Países</h5>
                   <h4 class="h4-eg">1 País</h4>
                   <p class="p-eg">
                     6 Ciudades
@@ -185,7 +183,6 @@
                 <!--TOUR GRUPAL-->
                 <div class="cardeg">
                   <div class="text-center"><i class="fa-solid fa-people-group"></i></div>
-                  <h5 class="title-eg">Tipo</h5>
                   <h4 class="h4-eg">Tour Grupal</h4>
                   <p class="p-eg">
                     Grupos de 15 viajeros
@@ -349,7 +346,7 @@
                     <li>Seguro de viajes por USD 65.000, incluye cobertura por COVID-19</li>
                     <li>Guía local durante todo el viaje</li>
                   </ul>
-                  <a href="#" class="bg-info text-white d-block py-3 text-decoration-none">Comprar</a>
+                  <a href="#" class="bg-secondary text-white d-block py-3 text-decoration-none">Comprar</a>
                 </div>
               </article>
               <article class="col-12 col-md-6">
@@ -362,7 +359,7 @@
                     <li>Seguro de viajes por USD 65.000, incluye cobertura por COVID-19</li>
                     <li>Guía local durante todo el viaje</li>
                   </ul>
-                  <a href="#" class="bg-info text-white d-block py-3 text-decoration-none">Comprar</a>
+                  <a href="#" class="bg-secondary text-white d-block py-3 text-decoration-none">Comprar</a>
                 </div>
               </article>
         </main>
