--- a/contactanos.html
+++ b/contactanos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TRAVELBRAVO</title>
+    <title>CONTACTANOS</title>
 
     <!--CSS BOOTSTRAP-->
     <link
@@ -107,7 +107,11 @@
                 </li>
                 <li><a class="dropdown-item" href="egipto.html">Egipto</a></li>
                 <li><a class="dropdown-item" href="kenia.html">Kenia</a></li>
-                <li><a class="dropdown-item" href="#">Machu Pichu</a></li>
+                <li>
+                  <a class="dropdown-item" href="machupichu.html"
+                    >Machu Picchu</a
+                  >
+                </li>
                 <li><a class="dropdown-item" href="#">Maldivas</a></li>
                 <li><a class="dropdown-item" href="#">Rio de Janeiro</a></li>
                 <li><a class="dropdown-item" href="#">Tailandia</a></li>
@@ -120,6 +124,8 @@
         </div>
       </div>
     </nav>
+
+    <!--FORMULARIO-->
 
     <!--FOOTER-->
     <footer>
