--- a/destinos.html
+++ b/destinos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TRAVEL BRAVO</title>
+    <title>DESTINOS</title>
 
     <!--CSS BOOTSTRAP-->
     <link
@@ -107,7 +107,11 @@
                 </li>
                 <li><a class="dropdown-item" href="egipto.html">Egipto</a></li>
                 <li><a class="dropdown-item" href="kenia.html">Kenia</a></li>
-                <li><a class="dropdown-item" href="#">Machu Pichu</a></li>
+                <li>
+                  <a class="dropdown-item" href="machupichu.html"
+                    >Machu Picchu</a
+                  >
+                </li>
                 <li><a class="dropdown-item" href="#">Maldivas</a></li>
                 <li><a class="dropdown-item" href="#">Rio de Janeiro</a></li>
                 <li><a class="dropdown-item" href="#">Tailandia</a></li>
@@ -157,7 +161,9 @@
                 unde nulla excepturi iste soluta suscipit, laudantium mollitia
                 pariatur molestias distinctio.
               </p>
-              <button class="card-button">Ver mas</button>
+              <a href="kenia.html"
+                ><button class="card-button">Ver mas</button></a
+              >
             </div>
           </div>
           <div class="col-md-4">
@@ -174,7 +180,9 @@
                 unde nulla excepturi iste soluta suscipit, laudantium mollitia
                 pariatur molestias distinctio.
               </p>
-              <button class="card-button">Ver mas</button>
+              <a href="machupichu.html"
+                ><button class="card-button">Ver mas</button></a
+              >
             </div>
           </div>
         </div>
