--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </li>
                 <li><a class="dropdown-item" href="egipto.html">Egipto</a></li>
                 <li><a class="dropdown-item" href="kenia.html">Kenia</a></li>
-                <li><a class="dropdown-item" href="#">Machu Pichu</a></li>
+                <li><a class="dropdown-item" href="machupichu.html">Machu Picchu</a></li>
                 <li><a class="dropdown-item" href="#">Maldivas</a></li>
                 <li><a class="dropdown-item" href="#">Rio de Janeiro</a></li>
                 <li><a class="dropdown-item" href="#">Tailandia</a></li>
@@ -154,21 +154,21 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="imagenes/egipto-carousel1.jpg"
+              src="imagenes/egipto prueba.jpg"
               class="d-block w-100"
               alt="egipto"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="imagenes/kenia-card1.jpg"
+              src="imagenes/kenia prueba 1.jpg"
               class="d-block w-100"
               alt="kenia"
             />
           </div>
           <div class="carousel-item">
             <img
-              src="imagenes/machupichu-card1.jpg"
+              src="imagenes/machupich prueba 11.jpg"
               class="d-block w-100"
               alt="machupichu"
             />
@@ -203,7 +203,9 @@
 
      <div class="container">
       <div class="row d-md-flex">
-        <div class="col-md-4"><!--DESCUBRE UNA NUEVA FORMA DE VIAJAR-->
+        <div class="col-md-4">
+          
+        <!--DESCUBRE UNA NUEVA FORMA DE VIAJAR-->
           <div class="card1">
             <div class="text-center"><i class="fa-regular fa-lightbulb"></i></div>
             <h4 class="card-title1">Descubre una nueva forma de viajar</h4>
