--- a/machupichu.html
+++ b/machupichu.html
@@ -112,7 +112,7 @@
                     >Machu Picchu</a
                   >
                 </li>
-                <li><a class="dropdown-item" href="#">Maldivas</a></li>
+                <li><a class="dropdown-item" href="maldivas.html">Maldivas</a></li>
                 <li><a class="dropdown-item" href="#">Rio de Janeiro</a></li>
                 <li><a class="dropdown-item" href="#">Tailandia</a></li>
               </ul>
