--- a/antes-de-viajar.html
+++ b/antes-de-viajar.html
@@ -109,7 +109,7 @@
                 <li><a class="dropdown-item" href="kenia.html">Kenia</a></li>
                 <li><a class="dropdown-item" href="machupichu.html">Machu Picchu</a></li>
                 <li><a class="dropdown-item" href="maldivas.html">Maldivas</a></li>
-                <li><a class="dropdown-item" href="#">Rio de Janeiro</a></li>
+                <li><a class="dropdown-item" href="rio.html">Rio de Janeiro</a></li>
                 <li><a class="dropdown-item" href="#">Tailandia</a></li>
               </ul>
             </li>
