--- a/machupichu.html
+++ b/machupichu.html
@@ -113,7 +113,7 @@
                   >
                 </li>
                 <li><a class="dropdown-item" href="maldivas.html">Maldivas</a></li>
-                <li><a class="dropdown-item" href="#">Rio de Janeiro</a></li>
+                <li><a class="dropdown-item" href="rio.html">Rio de Janeiro</a></li>
                 <li><a class="dropdown-item" href="#">Tailandia</a></li>
               </ul>
             </li>
